--- a/cv-server/.env.example
+++ b/cv-server/.env.example
@@ -1,7 +1,7 @@
-APP_ID=sc-scr-webserver
+APP_ID=cv-webserver
 PORT=3000
 LOG_LEVEL=<'fatal' | 'error' | 'warn' | 'info' | 'debug' | 'trace'>
-REQUEST_LIMIT=20mb
+REQUEST_LIMIT=2000mb
 SESSION_SECRET=<Optionaly SESSIONSUPERSECRET>
 
 #Swagger
