--- a/cv-server/package.json
+++ b/cv-server/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cv-server",
+  "name": "cv-webserver",
   "version": "1.0.1",
   "description": "The backend for CV",
   "main": "dist/index.js",
-  "author": "SuccessCraft",
+  "author": "DimaVab",
   "private": true,
   "scripts": {
     "start": "node dist/index.js",
@@ -14,7 +14,6 @@
     "test:debug": "mocha -r ts-node/register --inspect-brk test/**/*.ts --exit"
   },
   "dependencies": {
-    "@types/jsforce": "^1.9.28",
     "aws-sdk": "^2.868.0",
     "axios": "0.21.1",
     "body-parser": "^1.19.0",
@@ -24,8 +23,7 @@
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "jsforce": "^1.10.1",
-    "mongoose": "^5.12.5",
+    "mongoose": "^5.13.2",
     "nodemailer": "^6.5.0",
     "swagger-express-middleware": "^4.0.2"
   },
@@ -54,7 +52,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/pavel-lobach/sc-scr-website.git"
   },
   "license": "Apache-2.0"
 }
