--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cv",
   "version": "1.0.1",
-  "description": "CV for Dima Vabishchevich",
+  "description": "CV",
   "author": "Dima Vab",
   "homepage": "",
   "private": true,
@@ -14,15 +14,17 @@
     "unit:server": "cd server && mocha -r ts-node/register test/**/*.ts --exit && cd .."
   },
   "devDependencies": {
-    "eslint": "^7.27.0",
+    "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-node": "^4.1.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.3",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.3.0"
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "prettier": "^2.3.2"
   },
   "repository": {
     "type": "git",
