--- a/cv-server/.env.example
+++ b/cv-server/.env.example
@@ -1,4 +1,4 @@
-APP_ID=cv-webserver
+APP_ID=vshop-webserver
 PORT=3000
 LOG_LEVEL=<'fatal' | 'error' | 'warn' | 'info' | 'debug' | 'trace'>
 REQUEST_LIMIT=2000mb
@@ -9,13 +9,6 @@ SWAGGER_API_SPEC=/api/v1/spec
 
 NODE_ENV=<dev | production>
 
-WS_BACK_URL=SF_REST_URL
-WS_SITE_KEY=CLIENT_KEY_FOR_CRYPTO
-
-S3_BUCKET=p.baranov-aws-s3
-S3_KEY=AKIAXG3S6RFPVRWIE3EB
-S3_SECRET=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
-S3_REGION=us-east-2
 
 #SENDER EMAIL
 CONTACTUS_RECIPIENTS=<email address or addresses separated by ",">
